# estrucutura-de-datos

./: .gitignore  README.md
.github/workflows/: main.yml
arboles-busqueda-binario/: CMakeLists.txt  main.cpp
ayudantia-1/: punteros.cpp
clase-01/: CMakeLists.txt  alumno.cpp  alumno.h  main.cpp
clase-04-11/: CMakeLists.txt  recorrido.cpp  recorridoInOrder.cpp
clase-06/: main.cpp
clase-08/: Nodo.cpp  Nodo.h  main.cpp
control-1/: README.md  binary-search.cpp  bubble-sort.cpp  counting-sort.cpp  insertation-sort.cpp  selection-sort.cpp
extra-ejercicios-parte-2/cantar-mayor/: CMakeLists.txt  main.cpp
extra-ejercicios/buscar-valor/: CMakeLists.txt  main.cpp
extra-ejercicios/eliminar-duplicados/: CMakeLists.txt  main.cpp
extra-ejercicios/ordenar-lista/: CMakeLists.txt  main.cpp
extra-ejercicios/ordernar-estacionamento/: CMakeLists.txt  main.cpp
extra-ejercicios/remover-elementos/: CMakeLists.txt  main.cpp  main2.cpp
prueba-2/: CMakeLists.txt  README.md  main.cpp
taller-1/: CMakeLists.txt  README.md
taller-1/src/: main.cpp
taller-1/src/model/libro/: Libro.cpp  Libro.h
taller-1/src/model/material-bibliografico/: MaterialBibliografico.cpp  MaterialBibliografico.h
taller-1/src/model/revista/: Revista.cpp  Revista.h
taller-1/src/model/usuario/: Usuario.cpp  Usuario.h
taller-2/: CMakeLists.txt  Dockerfile  README.md  main.cpp
taller-2/model/minimax/: Minimax.cpp  Minimax.h
taller-2/model/nodo/: Nodo.h
taller-2/model/tablero/: Tablero.cpp  Tablero.h
taller-2/src/: main.cpp
taller-2/src/model/tablero/: Tablero.cpp  Tablero.h
(+2 files in other folders)
