add_executable(new_target src/main.cpp
        src/model/libro/Libro.cpp
        src/model/libro/Libro.h
        src/model/material-bibliografico/MaterialBibliografico.h
        src/model/material-bibliografico/MaterialBibliografico.cpp
        src/model/revista/Revista.cpp
        src/model/revista/Revista.h
        src/model/usuario/Usuario.cpp
        src/model/usuario/Usuario.h)
